--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=courses-api
+spring.datasource.url=jdbc:postgresql://localhost:5432/courses_api
+spring.datasource.username=admin
+spring.datasource.password=admin
